fixed z-index bug and persist bug

--- a/src/components/Gallery/styles.scss
+++ b/src/components/Gallery/styles.scss
@@ -16,6 +16,7 @@
   bottom: 0;
   left: 200px;
   padding-top: 30px;
+  will-change: z-index;
 }
 
 .cover > .delButton {
